# ligo-mirror

./: CHANGELOG.md  Dockerfile  Makefile  README.md  ligo.opam  ligo.opam.locked
changelog/: 1627902817  1627902859  1627902893  1628774659  1629298354  1629387784  1629492412  1629920484  1629920513  1629920551  1629920575  1629920609  1638364192
gitlab-pages/docs/language-basics/: strings.md
gitlab-pages/docs/reference/: string.md
gitlab-pages/website/: sidebars.json
src/: dune
src/coq/: co_de_bruijn.v  compiler.v  michelson.v
src/coq_ocaml/: dune  micheline_wrapper.ml
src/environment/: environment.ml
src/main/api/: api_helpers.ml  compile.ml  info.ml  mutate.ml  print.ml  run.ml  transpile.ml
src/main/compile/: dune  helpers.ml  of_aggregated.ml  of_core.ml  of_mini_c.ml  of_typed.ml  utils.ml
src/main/compiler_options/: compiler_options.ml
src/main/decompile/: of_michelson.ml
src/main/fuzz/: fuzz.ml  fuzz_ast_aggregated.ml
src/main/interpreter/: dune  interpreter.ml  interpreter.mli  layout.ml  michelson_backend.ml  michelson_to_value.ml  monad.ml  mutation.ml  tezos_state.ml
src/main/main_errors/: dune  formatter.ml  main_errors.ml  types.ml
src/main/scopes/: misc.ml  scopes.ml
src/passes/00-preprocessing/: cameligo.mli  dune  michelson.ml  michelson.mli  pascaligo.mli
src/passes/00-preprocessing/cameligo/: .links  Config.ml  PreprocMain.ml
src/passes/00-preprocessing/jsligo/: .links  Config.ml  PreprocMain.ml
src/passes/00-preprocessing/michelson/: .links  Config.ml  PreprocMain.ml  dune
src/passes/00-preprocessing/pascaligo/: .links  Config.ml  PreprocMain.ml  dune
src/passes/00-preprocessing/reasonligo/: .links  Config.ml  Makefile.cfg  PreprocMain.ml
src/passes/00-preprocessing/shared/: Common.ml  Common.mli  PreprocMainGen.ml  dune
src/passes/01-lexing/: cameligo.ml  dune  jsligo.ml  michelson.ml  pascaligo.mli  reasonligo.ml
src/passes/01-lexing/cameligo/: .links  AttachComments.ml  LexerMain.ml  Self_tokens.ml  Style.ml  Style.mli  Token.ml  Token.mll  dune
src/passes/01-lexing/jsligo/: .links  LexerMain.ml  Self_tokens.ml  Style.ml  Token.ml  Token.mll  dune
src/passes/01-lexing/michelson/: .links  Lexer.mli  LexerMain.ml  Self_tokens.ml  Token.mli  Token.mll  dune.old
src/passes/01-lexing/michelson/Stubs/: Michelson.ml
src/passes/01-lexing/pascaligo/: .links  LexerMain.ml  Self_tokens.ml  Self_units.ml  Style.ml  Style.mli  Token.ml  Token.mll  dune
src/passes/01-lexing/pascaligo/Self_passes/: Self_passes.ml  Style.ml  dune
src/passes/01-lexing/reasonligo/: .links  LexerMain.ml  Self_tokens.ml  Style.ml  Style.mli  Token.ml  Token.mll  dune
src/passes/01-lexing/shared/: Attr.ml  Attr.mli  Common.ml  Common.mli  Lexer.mli  Lexer.mll  LexerMainGen.ml  LexerMainGen.mli  Pipeline.ml  Pipeline.mli  Self_tokens.mli  Self_units.mli  Token.mli  Wrap.ml  Wrap.mli  dune
src/passes/02-parsing/: cameligo.ml  cameligo.mli  jsligo.ml  jsligo.mli  pascaligo.ml  pascaligo.mli  reasonligo.ml  reasonligo.mli
src/passes/04-tree_abstraction/pascaligo/: compiler.ml  compiler_new.ml  decompiler.ml  dune  errors.ml
src/passes/05-self_ast_imperative/: helpers.ml
src/passes/06-purification/: compiler.ml
src/passes/09.5-inference/: typer.ml
src/passes/10-checking/: checking.ml  checking.mli  context.ml  context.mli  errors.ml
src/passes/11-self_ast_typed/: dune  morph_module_in_record.ml  obj_ligo.ml  self_ast_typed.ml
src/passes/12-aggregation/: aggregation.ml  compiler.ml  errors.ml
src/passes/12-spilling/: compiler.ml
src/passes/13-self_ast_aggregated/: helpers.ml  monomorphisation.ml  obj_ligo.ml  self_ast_aggregated.ml
src/passes/14-scoping/: scoping.ml
src/passes/14-spilling/: compiler.ml  decompiler.ml  dune  errors.ml  layout.ml  spilling.ml  spilling.mli
src/passes/15-self_mini_c/: errors.ml  helpers.ml  self_mini_c.ml
src/passes/15-stacking/: compiler_program.ml
src/passes/16-scoping/: scoping.ml
src/stages/2-ast_imperative/: combinators.ml  dune
src/stages/3-ast_sugar/: combinators.ml  dune
src/stages/4-ast_core/: combinators.ml  dune
src/stages/5-ast_typed/: PP.ml  ast_typed.ml  combinators.ml  compare.ml  dune  to_yojson.ml  types.ml
src/stages/6-ast_aggregated/: PP.ml  ast_aggregated.ml  combinators.ml  compare.ml  dune  formatter.ml  helpers.ml  to_yojson.ml  types.ml
src/stages/7-mini_c/: formatter.ml
src/test/: basic_multisig_tests.ml  coase_tests.ml  hash_lock_tests.ml  hash_lock_tests_p.ml  hash_lock_tests_re.ml  id_tests.ml  id_tests_p.ml  md_file_tests.ml  multisig_tests.ml  multisig_v2_tests.ml  parser_negative_tests.ml  pledge_tests.ml  positive_contract_tests.ml  repl_test.ml  replaceable_id_tests.ml  test_helpers.ml  time_lock_repeat_tests.ml  time_lock_tests.ml  typer_tests.ml  tzip12_tests.ml
tools/ligo-syntax-highlighting/: LigoSyntaxHighlighting.ml
vendors/BuildSystem/: BuildSystem.ml  BuildSystem.opam  dune  module_resolutions.ml
vendors/GNUgetopt/: GNUgetopt.opam  Getopt.mli  dune
vendors/LexerLib/: API.ml  API.mli  CLI.ml  CLI.mli  Client.mli  Core.mli  Core.mll  Directive.ml  Directive.mli  Error.ml  Error.mli  LexerLib.ml  LexerLib.opam  Markup.ml  Options.mli  README.md  State.ml  State.mli  Thread.ml  Thread.mli  Token.mli  Unit.ml  Unit.mli  dune
vendors/Michelson/: Config.ml  Lexer.mli  Lexer.mll  LexerMain.ml  LexerMainGen.ml  Token.mli  Token.mll  dune
vendors/OCaml-build/: LICENSE  Makefile.cfg
vendors/ParserLib/: API.ml  API.mli  CLI.ml  CLI.mli  Options.mli  ParserLib.opam  Status.mli  dune
vendors/Preprocessor/: .links  API.mli  API.mll  Boolean.mly  CLI.ml  CLI.mli  Config.mli  E_AST.ml  E_Parser.mly  Error.ml  Error.mli  Markup.ml  Markup.mli  ModuleResolutions.ml  ModuleResolutions.mli  Options.mli  PreprocMain.ml  PreprocMainGen.ml  PreprocMainGen.mli  Preprocessor.opam  README.md  State.ml  State.mli  Status.mli  dune
vendors/Preprocessor/Stubs/: Preprocessor.ml
vendors/Red-Black_Trees/: RedBlackTrees.opam  dune
vendors/UnionFind/: .links  UnionFind.opam  dune
vendors/syntax-highlighting/: Core.ml
(+104 files in other folders)
