;; A UTF8-aware lexer library

(ocamllex Core)

(library
  (name LexerLib)
  (public_name LexerLib)
  (modules CLI API Core Unit Client Error
           Thread State Markup Directive Version)
  (modules_without_implementation Client Unit)
  (private_modules Core Error Version)
  (libraries
    ;; Vendor
    simple-utils
    Preprocessor
    ;; Third party
    getopt
    uutf))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action (with-stdout-to
          version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
