;; A UTF8-aware lexer library

(ocamllex Core)

(library
  (name LexerLib)
  (public_name LexerLib)
  (modules Token Status Options CLI API Core Unit Error
           Thread State Markup Directive Version)
  (modules_without_implementation Unit Token Options Status)
  (private_modules Core Error Version)
  (libraries
    ;; Vendor
    simple-utils
    Preprocessor
    ;; Third party
    getopt
    uutf))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action (with-stdout-to
          version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
