;; Build of a parser library

(library
  (name ParserLib)
  (public_name ParserLib)
  (modules Options Status CLI API Version)
  (modules_without_implementation Options Status)
  (libraries
    ;; Vendors
    simple-utils
    Preprocessor
    LexerLib
    GetoptLib
    ;; Third party
    menhirLib))

;; Build of the version source (for the user, as a CLI option)

(rule
 (targets Version.ml)
 (action (with-stdout-to
          Version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
