;; Building the preprocessor as a library

(library
  (name Preprocessor)
  (public_name Preprocessor)
  (libraries
    ;; Vendor
    simple-utils
    GetoptLib
    ;; Third party
    str
    uutf)
  (modules Markup Thread Boolean Status Config Options Error
           State Version CLI Env API PreprocMainGen)
  (modules_without_implementation Config Options Status)
  (private_modules Version Boolean))

;; Building the lexers of the preprocessor

(ocamllex API)

;; Building the parser of the preprocessor (for boolean expressions)

(menhir
  (modules Boolean))

;; Building PreprocMain.exe for a standalone preprocessor

(executable
  (name PreprocMain)
  (modules PreprocMain)
  (libraries Preprocessor))

;; Building the version source (for the user, as a CLI option)

(rule
 (targets version.ml)
 (action (with-stdout-to
          version.ml
          (run "sh" "-c"
               "printf 'let version = \"%s\"' \"${LIGO_VERSION}\""))))
