;; Build of all LIGO lexers as a library

(library
  (name lexing)
  (public_name ligo.lexing)
  (instrumentation (backend bisect_ppx))
  (libraries
     ;; Vendors
     simple-utils
     Preprocessor
     ;; LIGO
     lexing_shared
     preprocessing_pascaligo
     lexing_pascaligo
     preprocessing_cameligo
     lexing_cameligo
     preprocessing_reasonligo
     lexing_reasonligo
     preprocessing_jsligo
     lexing_jsligo
;;     preprocessing_michelson
     ;;     lexing_michelson
     )
  (modules
     Lexing
     Errors
     Pascaligo
     Cameligo
     Reasonligo
     Jsligo
     ;;     Michelson
     ))
