(library
 (name spilling)
 (public_name ligo.spilling)
 (instrumentation
  (backend bisect_ppx))
 (libraries simple-utils tezos-utils ast_aggregated mini_c self_mini_c predefined
   self_ast_aggregated)
 (preprocess
  (pps ppx_poly_constructor))
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils)))
