;; Build of the lexer by ocamllex

(ocamllex Lexer)

;; Build of the common lexer facilities as a library

(library
  (name lexing_shared)
  (public_name ligo.lexing.shared)
  (instrumentation (backend bisect_ppx))
  (libraries
     ;; Vendors
     simple-utils
     Preprocessor
     LexerLib
     ;; LIGO
     preprocessing_shared
     ;; Third party
     zarith
     str)
  (modules
     Errors Formatter Token Common Wrap
     Lexer Pipeline LexerMainGen UnlexerGen)
  (modules_without_implementation
     Token))
