(library
 (name pascaligo)
 (public_name ligo.pascaligo)
 (instrumentation
  (backend bisect_ppx))
 (libraries
    ;; Vendor
    simple-utils
    tezos-utils
    ;; LIGO
    cst
    lexing_shared
    ast_imperative
    predefined)
 (preprocess
  (pps ppx_poly_constructor))
 (flags
  (:standard -w +1..62-4-9-44-40-42-48-30@39@33 -open Simple_utils)))
